# flake-pilot

./: .bumpversion.cfg  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: ci-compile.yml  ci-sbom.yml  ci-units.yml  clippy.yml  robot-tests.yml
common/: Cargo.toml
common/src/: command.rs  config.rs  cwd.rs  error.rs  lib.rs  logger.rs  main.rs  paths.rs  user.rs  yamls.rs
common/src/config/: cfg_v1.rs  cfg_v2.rs  cfgparse.rs  config.rs  itf.rs  mod.rs
common/src/config/pilots/: fc.rs
common/tests/: cfg_ut.rs  cfg_ut_v2.rs  ut_rt.rs
common/tests/data/: bogus.yaml
common/tests/data/cfg-v1/: firecracker.yaml  podman.yaml
common/tests/data/cfg-v2/: all.yaml
doc/: Makefile  firecracker-pilot.rst  firecracker-service.rst  flake-ctl-build.rst  flake-ctl-firecracker-pull.rst  flake-ctl-firecracker-register.rst  flake-ctl-firecracker-remove.rst  flake-ctl-list.rst  flake-ctl-podman-build-deb.rst  flake-ctl-podman-load.rst  flake-ctl-podman-pull.rst  flake-ctl-podman-register.rst  flake-ctl-podman-remove.rst  flake-ctl.rst  oci-ctl-build-deb.rst  oci-ctl-list.rst  oci-ctl-load.rst  oci-ctl-podman-build-deb.rst  oci-ctl-podman-load.rst  oci-ctl-podman-pull.rst  oci-ctl-podman-register.rst  oci-ctl-podman-remove.rst  oci-ctl-pull.rst  oci-ctl-register.rst  oci-ctl-remove.rst  oci-ctl.rst  oci-pilot.rst  podman-pilot.rst  sci.rst
doc/RFC/: RfC-0001-Common-Config-Struct.md  RfC-0002-automated-packaging.md  template.md
doc/ws/: cfg_v1_spec.md  cfg_v2_spec.md
firecracker-pilot/: Cargo.toml
firecracker-pilot/dracut/usr/lib/dracut/modules.d/80netstart/: module-setup.sh
firecracker-pilot/firecracker-service/: Cargo.toml
firecracker-pilot/firecracker-service/service/: Cargo.toml
firecracker-pilot/firecracker-service/service-communication/: Cargo.toml
firecracker-pilot/firecracker-service/service-communication/src/: lib.rs
firecracker-pilot/firecracker-service/service/src/: app.rs  defaults.rs  main.rs
firecracker-pilot/firecracker-service/src/: app.rs  main.rs
firecracker-pilot/guestvm-tools/sci/: Cargo.toml
firecracker-pilot/guestvm-tools/sci/src/: defaults.rs  main.rs
firecracker-pilot/hostvm-tools/sci/: Cargo.toml
firecracker-pilot/hostvm-tools/sci/src/: main.rs
firecracker-pilot/src/: app_path.rs  config.rs  defaults.rs  firecracker.rs  main.rs
firecracker-pilot/template/: firecracker.json
firecracker-service/: Cargo.toml
firecracker-service/src/: app.rs  main.rs
flake-ctl/: Cargo.toml  README.md
flake-ctl-v1/: Cargo.toml
flake-ctl-v1/src/: app.rs  app_config.rs  defaults.rs
flake-ctl-v1/template/: firecracker-flake.yaml
flake-ctl/_flake-ctl-build/: Cargo.toml  README.md
flake-ctl/_flake-ctl-build/src/: config.rs
flake-ctl/debbuild/: container.spec.in  oci-deb
flake-ctl/flake-ctl/: Cargo.toml
flake-ctl/flake-ctl-build/: Cargo.toml
flake-ctl/flake-ctl-build-debbuild/: Cargo.toml
flake-ctl/flake-ctl-build-debbuild/src/: debbuild.rs  main.rs
flake-ctl/flake-ctl-build-debbuild/templates/: template.spec
flake-ctl/flake-ctl-build-dpkg/: Cargo.toml
flake-ctl/flake-ctl-build-dpkg/src/: main.rs
flake-ctl/flake-ctl-build-dpkg/templates/: podman
flake-ctl/flake-ctl-build-rpmbuild/: Cargo.toml
flake-ctl/flake-ctl-build-rpmbuild/src/: main.rs  rpmbuild.rs
flake-ctl/flake-ctl-build-rpmbuild/templates/: podman  template.spec
flake-ctl/flake-ctl-build/src/: builder.rs  config.rs  lib.rs  main.rs  options.rs
flake-ctl/flake-ctl-firecracker/: Cargo.toml
flake-ctl/flake-ctl-firecracker/src/: app.rs  app_config.rs  cli.rs  deb.rs  defaults.rs  firecracker.rs  main.rs  podman.rs
flake-ctl/flake-ctl-firecracker/templates/: firecracker.yaml
flake-ctl/flake-ctl-podman/: Cargo.toml
flake-ctl/flake-ctl-podman/src/: app.rs  app_config.rs  cli.rs  deb.rs  defaults.rs  main.rs  podman.rs
flake-ctl/flake-ctl-podman/templates/: podman.yaml
flake-ctl/flake-ctl/src/: addons.rs  builtin.rs  main.rs
flake-ctl/src/: app.rs  app_config.rs  cli.rs  deb.rs  defaults.rs  fetch.rs  firecracker.rs  main.rs  podman.rs
flake-ctl/template/: container-flake.yaml  firecracker-flake.yaml
flake-studio/: Cargo.toml  README.md  default_build_sh
flake-studio/src/: build.rs  common.rs  init.rs  main.rs  util.rs
helper/: update_changelog.py
launcher/: Cargo.toml
launcher/src/: app_path.rs  main.rs  podman.rs  tests.rs
oci-ctl/: Cargo.toml
oci-ctl/debbuild/: container.spec.in  oci-deb
oci-ctl/src/: app.rs  app_config.rs  cli.rs  deb.rs  defaults.rs  main.rs  podman.rs
oci-ctl/template/: container-flake.yaml  flake.yaml
oci-pilot/: Cargo.toml
oci-pilot/src/: app_path.rs  container_link.rs  defaults.rs  main.rs  podman.rs  tests.rs
oci-register/: Cargo.toml
oci-register/src/: app.rs  cli.rs  main.rs  podman.rs
package/: flake-pilot-rpmlintrc  flake-pilot.changes.ref  flake-pilot.spec  gcc_fix_static.sh  oci-pilot.spec  pilot.spec
package/debbuild/: oci-pilot.spec
package/debian/: README.Debian  changelog  control  copyright  rules
pilots/: Cargo.toml
pilots/src/firecracker-pilot/: app_path.rs  config.rs  defaults.rs  firecracker.rs
pilots/src/firecracker-pilot/dracut/etc/dracut.conf.d/: extramodules.conf
pilots/src/firecracker-pilot/dracut/usr/lib/dracut/modules.d/80netstart/: module-setup.sh  netstart.sh
pilots/src/firecracker-pilot/firecracker-service/service/: Cargo.toml
pilots/src/firecracker-pilot/firecracker-service/service-communication/src/: lib.rs
pilots/src/firecracker-pilot/firecracker-service/service/src/: main.rs
pilots/src/firecracker-pilot/guestvm-tools/sci/: Cargo.toml
pilots/src/firecracker-pilot/template/: firecracker.json
pilots/src/oci-pilot/: datasync.rs  datatracker.rs  fgc.rs  main.rs  pdm_tests.rs  pdsys.rs  podman.rs  prunner.rs
podman-pilot/: Cargo.toml
podman-pilot/src/: app_path.rs  config.rs  cwd.rs  defaults.rs  error.rs  main.rs  podman.rs  tests.rs
robot-tests/ctl/: podman.robot
robot_tests/common/: ctl.robot
robot_tests/ctl/: firecracker.robot  podman.robot  smoke.robot
utils/: flake-registry  oci-registry
(+18 files in other folders)
