[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]
resolver = "2"
members = [
    "flake-ctl/*",
    "flake-studio",
    "podman-pilot",
    "firecracker-pilot",
    "firecracker-pilot/guestvm-tools/sci",
    "firecracker-pilot/firecracker-service/*",
    "pilots",
    "common",
]
