[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]
resolver = "2"
members = [
    "flake-ctl/*",
    "flake-studio",
    "pilots/src/firecracker-pilot/firecracker-service/*",
    "pilots/src/firecracker-pilot/guestvm-tools/sci",
    "pilots",
    "common",
]
