[package]
name = "flakes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.4.0", features = ["serde"] }
nix = { version = "0.27.1", features = ["user"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_yaml = "0.9.25"
