[package]
name = "flakes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.4.0", features = ["serde"] }
chrono = "0.4.31"
colored = "2.0.4"
home = "0.5.5"
lazy_static = "1.4.0"
log = "0.4.20"
nix = { version = "0.27.1", features = ["user"] }
path-clean = "1.0.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_yaml = "0.9.25"
which = "4.4.2"
