[profile.release]
# strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package]
name = "firecracker-pilot"
version = "2.1.14"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
which = { version = "4.2" }
yaml-rust = { version = "0.4" }
log = { version = "0.4" }
env_logger = { version = "0.9" }
tempfile = { version = "3.4" }
spinoff = { version = "0.7" }
ubyte = { version = "0.10" }
