[package]
name = "oci-ctl"
version = "0.0.1"
authors = ["Marcus Schäfer <marcus.schaefer@elektrobit.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
claim = { version = "0.3.1" }
log = { version = "0.4" }
env_logger = { version = "0.9.0" }
yaml-rust = { version = "0.4" }
glob = { version = "0.3" }
