[package]
name = "pilots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flakes = { version = "0.1.0 ", path = "../common" }
log = "0.4.20"

[[bin]]
name = "oci-pilot"
path = "src/oci-pilot/main.rs"
