[profile.release]
# strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package]
name = "podman-pilot"
version = "2.2.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
which = { version = "4.2.5" }
yaml-rust = { version = "0.4" }
log = { version = "0.4" }
env_logger = { version = "0.9.0" }
tempfile = { version = "3.4.0" }
spinoff = { version = "0.7.0" }
