[profile.release]
# strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package]
name = "podman-pilot"
version = "2.2.19"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
which = { version = "4.2.5" }
yaml-rust = { version = "0.4" }
log = { version = "0.4" }
env_logger = { version = "0.9.0" }
tempfile = { version = "3.4.0" }
spinoff = { version = "0.7.0" }
lazy_static = "1.4.0"
serde = {version = "1.0.175", features = ["derive"]}
serde_yaml = "0.9.25"
thiserror = "1.0.44"
flakes = { version = "0.1.0 ", path= "../common" }
