[package]
name = "flake_ctl_build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Fix these three in place for now because ubuntu ruts is still at 1.66
clap = { version = "=4.3.24", features = ["string", "derive"] }
clap_lex = {version = "=0.5.0"}
anstyle = {version = "=1.0.2"}
flakes = { version = "0.1.0", path = "../../common" }
thiserror = "1.0.49"
tempfile = "3.8.0"
fs_extra = "1.3.0"
anyhow = "1.0.75"
derive_builder = "0.12.0"
