[package]
name = "flake-ctl-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "=4.3.24", features = ["string", "derive"] }
colored = "2.1.0"

flakes = { version = "0.1.0", path = "../../common" }
fs_extra = "1.3.0"
serde = "1.0.195"
serde_yaml = "0.9.30"
sys-info = "0.9.1"
tempfile = "3.9.0"
termion = "3.0.0"
