[package]
name = "flake-ctl-podman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "3.0.14", features = ["derive"] }
env_logger = "0.10.0"
glob = "0.3.1"
log = "0.4.20"
serde = "1.0.188"
serde_yaml = "0.9.25"
