[profile.release]
# strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package]
name = "firecracker-service-communication"
version = "2.1.5"
edition = "2018"


[dependencies]
env_logger = "0.10.0"
log = "0.4"
serde = {version="1.0.160", features=["derive"]}
serde_json = "1.0.95"
