[package]
name = "firecracker-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.5.0"
env_logger = "0.10.0"
log = "0.4"
serde = {version="1.0.160", features=["derive"]}
serde_json = "1.0.95"
firecracker-service-communication ={path="../service-communication"}
