[profile.release]
# strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package]
name = "firecracker-service"
version = "2.2.8"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.5.0"
env_logger = "0.10.0"
log = "0.4"
firecracker-service-communication = { path="../service-communication" }
