[profile.release]
# strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package]
name = "sci"
version = "2.1.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4"
sys-mount = "2.0.2"
system_shutdown = "4.0.1"
shell-words = "1.1.0"
