[package]
name = "sci"
version = "2.2.14"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.10" }
log = { version = "0.4" }
sys-mount = { version = "2.0", default-features = false, features = [] }
system_shutdown = { version = "4.0" }
shell-words = { version = "1.1" }
vsock = { version = "0.3" }
